syntax = "proto3";

package canary.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/canary/v1";

message ProvisionRequest {
  string canary_id = 1 [
    (validate.rules).string = {
      ignore_empty: true,
      len: 26
    },
    (tagger.tags) = "faker:\"shortID\""
  ];

  bool sandbox_mode = 3;
}

message ProvisionResponse {
  string canary_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  string org_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}
